[package]
name = "shy"
version = "0.1.1"
authors = ["chris west <c@xvxx.io>"]
description = "barebones ssh launcher"
repository = "https://github.com/xvxx/shy"
readme = "README.md"
edition = "2018"
license = "MIT"
keywords = ["ssh", "tui", "terminal", "cli"]
categories = ["command-line-utilities"]
exclude = [
    "img/*"
]

[dependencies]
termion = "1.5.5"
