[package]
name = "shy"
version = "0.1.6"
authors = ["chris west <c@xvxx.io>"]
description = "barebones ssh launcher"
repository = "https://github.com/xvxx/shy"
readme = "README.md"
edition = "2018"
license = "MIT"
keywords = ["ssh", "tui", "terminal", "cli"]
categories = ["command-line-utilities"]
exclude = [
    "img/*"
]

# Change v1.4.1 -> v1.4.2 in README on `cargo release`
[package.metadata.release]
#pre-release-replacements = [
  #{file="README.md", search="shy-v\\d+\\.\\d+\\.\\d+-", replace="{{crate_name}}-v{{version}}-"},
  #{file="README.md", search="/v\\d+\\.\\d+\\.\\d+/", replace="/v{{version}}/"},
#]
dev-version-ext = "dev"

[dependencies]
termion = "1.5.5"
flume = { version = "0.7.1", default-features = false, features = ['select'] }
signal-hook = "0.1.14"
indexmap = "1.3.2"
